# voxbot

./: .gitignore  .pre-commit-config.yaml  README.md  make.py  pyproject.toml
.agents/: AGENTS.md
.agents/skills/voxbot-standards/: SKILL.md
.data/agent_logs/: 2026-04-28-hooks.jsonl
.github/workflows/: tests.yml  verify.yml
.ideas/: mistral-to-xai-migration.md  pycord-migration.md  tts-providers.md  voice-agent-hybrid-architecture.md
.plans/: mac-server-self-healing-deploy.md  mistral-to-qwen3-tts.md  redis-agent-memory-and-docket.md  soul-python-sandbox.md
deploy/macos/: ARCHITECTURE.md  README.md
deploy/macos/apps/: deploy.sh  run-bot.sh  run-worker.sh
deploy/macos/infra/: Dockerfile.ams  compose.yaml  infra-up.sh
deploy/macos/launchd/: com.voxbot.bot.plist  com.voxbot.deployer.plist  com.voxbot.infra.plist  com.voxbot.worker.plist
docs/: ARCHITECTURE.md  CODE-RULES.md
src/voxbot/: __init__.py  __main__.py  __project__.py  ai.py  bot.py  checks.py  dota_wiki.py  error_reports.py  errors.py  model.py  settings.py  store.py  tasks.py  utils.py
src/voxbot/plugins/: healthcheck.py  voice.py
src/voxbot/plugins/admin/: __init__.py  cog.py  schema.py
src/voxbot/plugins/health/: __init__.py  cog.py
src/voxbot/plugins/soul/: __init__.py  actions.py  ai.py  cog.py  embedding.py  errors.py  identity.py  jobs.py  memory.py  models.py  prompts.py  settings.py  storage.py  utils.py
src/voxbot/plugins/soul/prompts/: personality.mdc
src/voxbot/plugins/voice/: __init__.py  ai.py  cog.py  commands.py  errors.py  jobs.py  state.py
src/voxbot/runtime/: __init__.py  docket.py  health.py  jobs.py  redis.py  worker.py
src/voxbot/services/: mistral.py  tts.py
tests/: test_admin_cog.py  test_bot_lifecycle.py  test_error_notifications.py  test_health_runtime.py  test_settings.py  test_soul_cog.py  test_soul_identity.py  test_soul_memory.py  test_soul_models.py  test_worker_registration.py
