[project]
name = "voxbot"
version = "1.0.0"
description = "A self-healing, memory-capable TTS Discord bot with Mistral and Gemini integration."
readme = "README.md"
authors = [
    { name = "boonhapus", email = "me@boonhap.us" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "cyclopts>=4.10.2",
    "discord.py[voice]>=2.7.0",
    "discord-ext-songbird>=0.4.3",
    "mistralai>=2.4.0",
    "niquests>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[google]>=0.0.40",
    "pydantic-settings>=2.0.0",
    "structlog>=25.5.0",
    "redis>=5.0.0",
    "pydocket>=0.20.2",
    "agent-memory-client>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
voxbot = "voxbot.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
docstring-code-format = true
