[project]
name = "voxbot"
version = "1.0.0"
description = "A self-healing, memory-capable TTS Discord bot with Mistral and Gemini integration."
readme = "README.md"
authors = [
    { name = "boonhapus", email = "me@boonhap.us" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "cyclopts>=4.10.2",
    "discord.py[voice]>=2.7.0",
    "discord-ext-songbird>=0.4.3",
    "mistralai>=2.4.0",
    "niquests>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[google]>=0.0.40",
    "pydantic-settings>=2.0.0",
    "structlog>=25.5.0",
    "redis>=5.0.0",
    "pydocket>=0.20.2",
    "agent-memory-client>=0.14.0",
    "certifi>=2025.0.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
voxbot = "voxbot.__main__:cli"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pyrefly>=0.65.0",
    "pytest>=8.0.0",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260510",
    "vulture>=2.16",
]

[tool.pyrefly]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade (modernize syntax for your target version)
    "B",     # flake8-bugbear (common pitfalls)
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style (since you're using pytest)
    "RUF",   # ruff-specific rules
]

[tool.vulture]
min_confidence = 80
paths = ["src"]

[tool.deptry.per_rule]
"DEP002" = { ignore = ["types-pyyaml"] }
