[project]
name = "voxbot"
version = "1.0.0"
description = "A self-healing, memory-capable TTS Discord bot with Mistral and Gemini integration."
readme = "README.md"
authors = [
    { name = "boonhapus", email = "me@boonhap.us" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "cyclopts>=4.10.2",
    "discord.py[voice]>=2.7.0",
    "discord-ext-songbird>=0.4.3",
    "mistralai>=2.4.0",
    "niquests>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[google]>=0.0.40",
    "pydantic-settings>=2.0.0",
    "structlog>=25.5.0",
    "redis>=5.0.0",
    "pydocket>=0.20.2",
    "agent-memory-client>=0.14.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "google-genai>=2.0.1",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
voxbot = "voxbot.__main__:cli"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pre-commit>=4.0.0",
    "pyrefly>=0.65.0",
    "pytest>=8.0.0",
    "ruff>=0.15.11",
    "skylos>=4.15.0",
    "types-pyyaml>=6.0.12.20260510",
    "vulture>=2.16",
]

[tool.pyrefly]
check-unannotated-defs = true

[tool.pyrefly.errors]
implicit-any = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.skylos]
# Quality thresholds
complexity = 10        # max cyclomatic complexity per function
nesting = 3            # max nesting depth
max_args = 5           # max function parameters
max_lines = 50         # max function length
duplicate_strings = 3  # flag string literals repeated this many times
ignore = [
    "SKY-D223",  # https://docs.skylos.dev/rules-reference#sky-d223--undeclared-dependency
    "SKY-Q802",  # https://docs.skylos.dev/rules-reference#sky-q802--distance-from-main-sequence
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
from-first = true
split-on-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade (modernize syntax for your target version)
    "B",     # flake8-bugbear (common pitfalls)
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style (since you're using pytest)
    "RUF",   # ruff-specific rules
]
ignore = [
    "B008",  # function-call-in-default-argument
]

[tool.deptry.per_rule_ignores]
"DEP002" = ["colorama"]
"DEP003" = ["voxbot"]
